# leadfinder

./: .gitignore  README.md  __init__.py  deploy.py  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/api/: app.py  deps.py
app/api/routes/: health.py  leads.py  searches.py
app/database/: __init__.py  mongo_client.py
app/exports/: __init__.py  csv_export.py
app/models/: __init__.py  business.py  search.py
app/repositories/: lead_repository.py  search_repository.py
app/schemas/: __init__.py  common.py  lead.py  search.py
app/scraper/: __init__.py  business_scraper.py  website_checker.py
app/services/: __init__.py  lead_scoring.py  lead_service.py  search_service.py
app/workers/: search_runner.py
